@@ -19,6 +19,7 @@ AUTHORS = [
         'Hartmut Goebel',
         'Korbinian Preisler <info@virtual-things.biz>',
         'Mathias Behrle <info@m9s.biz>',
+        'Maxime Richez <maxime.richez@saluc.com>',
         'Nicolas Évrard <nicolas.evrard@b2ck.com>',
         'Sednacom <contact@sednacom.fr>',
         'Udo Spallek <info@virtual-things.biz>',
